--- a/src/components/ProductListing/ProductListingStyles.scss
+++ b/src/components/ProductListing/ProductListingStyles.scss
@@ -18,6 +18,7 @@
 
     @include respond(phone) {
       grid-template-columns: 1fr;
+      grid-gap: 20vw;
     }
   }
 }
